# Underspecification-QA-conf-paper

./: main.py  pyproject.toml
QA_datasets_classified_qa_eval/: BaseClass-GoogleNQ_Gemini.ipynb  BaseClass-GoogleNQ_gpt4o.ipynb  BaseClass-HotpotQA_Gemini.ipynb  BaseClass-HotpotQA_gpt4o.ipynb  BaseClass-TriviaQA_Gemini.ipynb  BaseClass-TriviaQA_gpt4o.ipynb  GoogleNQ_sample.jsonl  helper_functions_qa.py  hotpot_sample_raw.jsonl  trivia_sample_raw.jsonl
QA_datasets_classified_qa_eval/output_csv/: GoogleNQ_FS_gpt4o_Ragas.csv  GoogleNQ_UND_Gemini_Ragas.csv  GoogleNQ_UND_gpt4o_Ragas.csv  HotpotQA_FS_Gemini_Ragas.csv  HotpotQA_FS_gpt4o_Ragas.csv  HotpotQA_UND_Gemini_Ragas.csv  HotpotQA_UND_gpt4o_Ragas.csv  TriviaQA_FS_gpt4o_Ragas.csv  TriviaQA_UND_gpt4o_Ragas.csv
QA_datasets_classified_qa_eval/output_jsonl/: BASELINE_GoogleNQ_FS_gpt_with_most_metrics.jsonl  BASELINE_GoogleNQ_UND_gpt_with_most_metrics.jsonl  BASELINE_HotpotQA_FS_qa_Gemini_with_squad_scores.jsonl  BASELINE_HotpotQA_FS_qa_gpt_with_squad_scores.jsonl  BASELINE_HotpotQA_UND_qa_Gemini_with_squad_scores.jsonl  BASELINE_HotpotQA_UND_qa_gpt_with_squad_scores.jsonl  BASELINE_TriviaQA_FS_qa_Gemini_with_squad_scores.jsonl  (+3 more)
Testing Off-the-Shelf LLMs/: DeepSeek_API_R1_V3.ipynb  DeepSeek_distilled_series.ipynb  Llama_series.ipynb  Qwen3_4B_verified_test.csv  Qwen3_4B_verified_test_DEF.csv  Qwen_3_4B_feed_reasoning_back_(1) (2).ipynb  Qwen_series.ipynb  helper_functions_testing.py  new_set_wise_evaluation.ipynb  off_the_shelf_DSPy.ipynb  statistical_tests.ipynb  supplementary_analysis.ipynb  testing_verified_examples.ipynb
(+29 files in other folders)
