[project]
name = "paper-clean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "ipywidgets>=8.1.7",
    "langchain-deepseek>=0.1.4",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "openai>=2.4.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "ragas>=0.3.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
